fix: overflow

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -11,7 +11,7 @@ $font-stack-serif: 'Montserrat',
 sans-serif;
 $form-input-radius: 6px;
 $submit-btn-height: 45px;
-$title-n-form-gap: 4rem;
+$title-n-form-gap: 10rem;
 
 @media (min-width: 480px) {
     form {
@@ -97,6 +97,12 @@ body {
     img {
         width: 45px;
     }
+}
+
+.main {
+    @include flexCenter;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .main-text {
@@ -187,7 +193,6 @@ form {
 }
 
 footer {
-    margin-top: 35%;
     @include flexCenter;
     justify-content: space-between;
     flex-direction: column;
